5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1684_1100.log
== TEST (2019-04-22 16:19:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(float("escreva o valor da cedula: "))
if ((a != 2) or (a != 5) or (a != 10) or (a != 20) or (a != 50) or (a != 100)):
	print (a)
	print ("Animal: Invalido")
elif (a == 2):
	print (a)
	print ("Animal: Tartaruga")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
else:
	print (a)
	print ("Animal: Garoupa")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(float("escreva o valor da cedula: "))
ValueError: could not convert string to float: 'escreva o valor da cedula: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:19:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if ((a != 2) or (a != 5) or (a != 10) or (a != 20) or (a != 50) or (a != 100)):
	print (a)
	print ("Animal: Invalido")
elif (a == 2):
	print (a)
	print ("Animal: Tartaruga")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
else:
	print (a)
	print ("Animal: Garoupa")
-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:20:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if ((a != 2) or (a != 5) or (a != 10) or (a != 20) or (a != 50) or (a != 100)):
	print (a)
	print ("Animal: Invalido")
elif (a == 2):
	print (a)
	print ("Animal: Tartaruga")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
else:
	print (a)
	print ("Animal: Garoupa")
-- OUTPUT:
100
Animal: Invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:28:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print (a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print (a)
	print ("Animal: Garoupa")
else:
	print (a)
	print ("Animal: Invalido")
-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 16:29:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print (a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print (a)
	print ("Animal: Garoupa")
else:
	print (a)
	print ("Animal: Invalido")
-- EXECUTION TIME:
0.153115
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
50
Animal: Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:29:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print (a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print (a)
	print ("Animal: Garca")
elif (a == 10):
	print (a)
	print ("Animal: Arara")
elif (a == 20):
	print (a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print (a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print (a)
	print ("Animal: Garoupa")
else:
	print (a)
	print ("Animal: Invalido")
-- OUTPUT:
100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:30:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print ("Entrada: " a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print ("Entrada: " a)
	print ("Animal: Garca")
elif (a == 10):
	print ("Entrada: " a)
	print ("Animal: Arara")
elif (a == 20):
	print ("Entrada: " a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print ("Entrada: " a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print ("Entrada: " a)
	print ("Animal: Garoupa")
else:
	print ("Entrada: " a)
	print ("Animal: Invalido")
-- ERROR:
File "XXXX", line 6
    print ("Entrada: " a)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:31:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print ("Entrada: " + a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print ("Entrada: " + a)
	print ("Animal: Garca")
elif (a == 10):
	print ("Entrada: " + a)
	print ("Animal: Arara")
elif (a == 20):
	print ("Entrada: " + a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print ("Entrada: " + a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print ("Entrada: " + a)
	print ("Animal: Garoupa")
else:
	print ("Entrada: " + a)
	print ("Animal: Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print ("Entrada: " + a)
TypeError: must be str, not int
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 16:32:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print ("Entrada: ", a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print ("Entrada: ", a)
	print ("Animal: Garca")
elif (a == 10):
	print ("Entrada: ", a)
	print ("Animal: Arara")
elif (a == 20):
	print ("Entrada: ", a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print ("Entrada: ", a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print ("Entrada: ", a)
	print ("Animal: Garoupa")
else:
	print ("Entrada: ", a)
	print ("Animal: Invalido")
-- OUTPUT:
Entrada:  100
Animal: Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 16:32:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.
a = int(input("escreva o valor da cedula: "))
if (a == 2):
	print ("Entrada: ", a)
	print ("Animal: Tartaruga ")
elif (a == 5):
	print ("Entrada: ", a)
	print ("Animal: Garca")
elif (a == 10):
	print ("Entrada: ", a)
	print ("Animal: Arara")
elif (a == 20):
	print ("Entrada: ", a)
	print ("Animal: Mico-leao-dourado")
elif (a == 50):
	print ("Entrada: ", a)
	print ("Animal: Onca-pintada")
elif (a == 100):
	print ("Entrada: ", a)
	print ("Animal: Garoupa")
else:
	print ("Entrada: ", a)
	print ("Animal: Invalido")
-- EXECUTION TIME:
0.156818
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal: Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal: Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal: Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
